# DuskDrop

./: run.py
backend/: README.md  pyproject.toml
backend/app/: database.py  main.py  models.py  pricing.py  schemas.py  seed.py
backend/app/routers/: agents.py  alerts.py  impact.py  listings.py  reservations.py  vendors.py
frontend/: .env.local  index.html  package-lock.json  package.json
frontend/src/app/: App.tsx
frontend/src/app/components/dusk/: CountdownRing.tsx  DuskSky.tsx  Footer.tsx  GrainOverlay.tsx  ListingCard.tsx  MagneticButton.tsx  Nav.tsx  Reveal.tsx  Skyline.tsx  ThemeToggle.tsx  TickingPrice.tsx
frontend/src/app/lib/: api.ts  data.ts  fallback.ts  theme.tsx
frontend/src/app/pages/: Discover.tsx  FlockAlerts.tsx  Impact.tsx  Landing.tsx  ListingDetail.tsx  ModuleShowcase.tsx  NotFound.tsx  Reservation.tsx  SurpriseBag.tsx  Vendor.tsx
frontend/src/imports/: AGENTS.md  DESIGN-INSTRUCTIONS.md  README.md
frontend/src/styles/: fonts.css  theme.css
